force-app/main/default/objects/Target__c/fields/Actual_Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Sales__c</fullName>
    <label>Actual Monthly Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>