force-app/main/default/objects/Target__c/fields/Actual_Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Target__c</fullName>
    <label>Sales Target Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>