force-app/main/default/objects/Target__c/fields/Actual_NI_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Actual_NI_Monthly__c</fullName>
    <label>Actual NI Yearly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>