force-app/main/default/objects/Target__c/fields/Actual_Visit_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Tier_3__c</fullName>
    <label>Actual Visit Tier 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>