force-app/main/default/objects/Target__c/fields/Count_Each_Stage__c.field-meta.xml
<CustomField>
    <fullName>Count_Each_Stage__c</fullName>
    <label>Count Each Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>