force-app/main/default/objects/Target__c/fields/group__c.field-meta.xml
<CustomField>
    <fullName>group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale volume</fullName>
            </value>
            <value>
                <fullName>Utilization</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>