force-app/main/default/objects/Target__c/fields/Monthly_App_In_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_App_In_Target__c</fullName>
    <label>Monthly App In Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>