force-app/main/default/objects/Target__c/fields/Monthly_Approved_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Approved_Actual__c</fullName>
    <label>Monthly Approved Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>