force-app/main/default/objects/Target__c/fields/Monthly_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Approved_Amount__c</fullName>
    <label>Monthly Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>