force-app/main/default/objects/Target__c/fields/Monthly_Close_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Close_Sales_Actual__c</fullName>
    <label>Monthly Close Sales Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>