force-app/main/default/objects/Target__c/fields/Monthly_Close_Sales_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Close_Sales_Target_Amount__c</fullName>
    <label>Monthly Close Sales Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>