force-app/main/default/objects/Target__c/fields/Monthly_Set_Up_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Set_Up_Actual__c</fullName>
    <label>Monthly Set Up Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>