force-app/main/default/objects/Target__c/fields/Monthly_Set_up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Set_up_Amount__c</fullName>
    <label>Monthly Set up Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>