force-app/main/default/objects/Target__c/fields/Monthly_Set_Up_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Set_Up_Target__c</fullName>
    <label>Monthly Set Up Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>