force-app/main/default/objects/Target__c/fields/Monthly_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Yearly Target Date</label>
    <type>Date</type>
</CustomField>