force-app/main/default/objects/Target__c/fields/NI_Target_Monthly__c.field-meta.xml
<CustomField>
    <fullName>NI_Target_Monthly__c</fullName>
    <label>Original Target NI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>