force-app/main/default/objects/Target__c/fields/Opportunity_stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_stage__c</fullName>
    <label>Opportunity stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA Prep</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Post Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>