force-app/main/default/objects/Target__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>