force-app/main/default/objects/Target__c/fields/RM_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>RM_Team_Code__c</fullName>
    <formula>Owner:User.Zone_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Team Code</label>
    <type>Text</type>
</CustomField>