force-app/main/default/objects/Target__c/fields/Round_2_Target_NI_3_9__c.field-meta.xml
<CustomField>
    <fullName>Round_2_Target_NI_3_9__c</fullName>
    <label>Round 2 Target NI (3+9)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>