force-app/main/default/objects/Target__c/fields/Round_3_Target_NI_6_6__c.field-meta.xml
<CustomField>
    <fullName>Round_3_Target_NI_6_6__c</fullName>
    <label>Round 3 Target NI (6+6)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>