force-app/main/default/objects/Target__c/fields/Section_WBG__c.field-meta.xml
<CustomField>
    <fullName>Section_WBG__c</fullName>
    <label>Section WBG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Llimit Setup</fullName>
            </value>
            <value>
                <fullName>TF</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>Derivaties</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Dep</fullName>
            </value>
            <value>
                <fullName>NIIc</fullName>
            </value>
            <value>
                <fullName>NIId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>