force-app/main/default/objects/Target__c/fields/Target_Items__c.field-meta.xml
<CustomField>
    <fullName>Target_Items__c</fullName>
    <label>Target Items</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>Loan Core Asset</fullName>
            </value>
            <value>
                <fullName>OD Core Asset</fullName>
            </value>
            <value>
                <fullName>TMB One Bank</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>You Card</fullName>
            </value>
            <value>
                <fullName>You Trade</fullName>
            </value>
            <value>
                <fullName>EDC Volume</fullName>
            </value>
            <value>
                <fullName>BA Credit Life Premium</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>You Care</fullName>
            </value>
            <value>
                <fullName>Front End</fullName>
            </value>
            <value>
                <fullName>You Card Fee</fullName>
            </value>
            <value>
                <fullName>You Pay Fee</fullName>
            </value>
            <value>
                <fullName>You Trade Fee</fullName>
            </value>
            <value>
                <fullName>EDC Fee</fullName>
            </value>
            <value>
                <fullName>BA-Life Fee</fullName>
            </value>
            <value>
                <fullName>Health care Fee</fullName>
            </value>
            <value>
                <fullName>You Care Fee</fullName>
            </value>
            <value>
                <fullName>Others Fee</fullName>
            </value>
            <value>
                <fullName>LG and other credit fee</fullName>
            </value>
            <value>
                <fullName>BA-Non Life</fullName>
            </value>
            <value>
                <fullName>Cash Mgt</fullName>
            </value>
            <value>
                <fullName>Merchant (Net)</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>TF(Net)</fullName>
            </value>
            <value>
                <fullName>NIIc</fullName>
            </value>
            <value>
                <fullName>NIId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>