force-app/main/default/objects/Target__c/fields/Target_Visit_Tier_4__c.field-meta.xml
<CustomField>
    <fullName>Target_Visit_Tier_4__c</fullName>
    <label>Target Visit Tier 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>