force-app/main/default/objects/Target__c/fields/TargetFeeAmount_3_9__c.field-meta.xml
<CustomField>
    <fullName>TargetFeeAmount_3_9__c</fullName>
    <label>TargetFeeAmount (3+9)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>