force-app/main/default/objects/Target__c/fields/TargetFeeAmount_6_6__c.field-meta.xml
<CustomField>
    <fullName>TargetFeeAmount_6_6__c</fullName>
    <label>TargetFeeAmount (6+6)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>