force-app/main/default/objects/Target__c/fields/TargetNIIcAmount_3_9__c.field-meta.xml
<CustomField>
    <fullName>TargetNIIcAmount_3_9__c</fullName>
    <label>TargetNIIcAmount (3+9)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>