force-app/main/default/objects/Target__c/fields/TargetNIIcAmount_9_3__c.field-meta.xml
<CustomField>
    <fullName>TargetNIIcAmount_9_3__c</fullName>
    <label>TargetNIIcAmount (9+3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>