force-app/main/default/objects/Target__c/fields/TargetNIIcAmount__c.field-meta.xml
<CustomField>
    <fullName>TargetNIIcAmount__c</fullName>
    <label>TargetNIIcAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>