force-app/main/default/objects/Target__c/fields/TargetNIIdAmount_6_6__c.field-meta.xml
<CustomField>
    <fullName>TargetNIIdAmount_6_6__c</fullName>
    <label>TargetNIIdAmount (6+6)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>