force-app/main/default/objects/Target__c/recordTypes/Activities_Target.recordType-meta.xml
<RecordType>
    <fullName>Activities_Target</fullName>
    <active>true</active>
    <label>Activities Target</label>
</RecordType>