force-app/main/default/objects/Target__c/recordTypes/NI_Target.recordType-meta.xml
<RecordType>
    <fullName>NI_Target</fullName>
    <active>true</active>
    <description>NI Target for Account plan</description>
    <label>NI Target</label>
</RecordType>