force-app/main/default/objects/Target__c/recordTypes/Pipelines_Target.recordType-meta.xml
<RecordType>
    <fullName>Pipelines_Target</fullName>
    <active>true</active>
    <label>Pipelines Target</label>
</RecordType>