force-app/main/default/objects/Target__c/recordTypes/Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>Sales_Target</fullName>
    <active>true</active>
    <label>Sales Target</label>
</RecordType>