force-app/main/default/objects/Target__c/listViews/Activities_Target.listView-meta.xml
<ListView>
    <fullName>Activities_Target</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Monthly_Target_Date__c</columns>
    <columns>Monthly_Contacted_Target__c</columns>
    <columns>Monthly_Visit_Target__c</columns>
    <columns>Monthly_Close_Sales_Target__c</columns>
    <columns>Monthly_App_In_Target__c</columns>
    <columns>Monthly_Approved_Target__c</columns>
    <columns>Monthly_Set_Up_Target__c</columns>
    <columns>Reference_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Target__c.Activities_Target</value>
    </filters>
    <label>Activities Target</label>
    <language>en_US</language>
</ListView>