force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>