force-app/main/default/objects/Target__c/listViews/All_NI_Target.listView-meta.xml
<ListView>
    <fullName>All_NI_Target</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Segment__c</columns>
    <columns>Zone__c</columns>
    <columns>Reference_ID__c</columns>
    <columns>Monthly_Target_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Target__c.NI_Target</value>
    </filters>
    <label>All NI Target</label>
</ListView>