force-app/main/default/objects/Target__c/listViews/My_NI_Target.listView-meta.xml
<ListView>
    <fullName>My_NI_Target</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Monthly_Target_Date__c</columns>
    <columns>NI_Target_Monthly__c</columns>
    <columns>Actual_NI_Monthly__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Target__c.NI_Target</value>
    </filters>
    <label>My NI Target</label>
    <language>en_US</language>
</ListView>