force-app/main/default/objects/Target__c/listViews/Pipelines_Target.listView-meta.xml
<ListView>
    <fullName>Pipelines_Target</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Segment__c</columns>
    <columns>Zone__c</columns>
    <columns>Opportunity_stage__c</columns>
    <columns>Amount_each_stage__c</columns>
    <columns>Reference_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Target__c.Pipelines_Target</value>
    </filters>
    <label>Pipelines Target</label>
</ListView>