force-app/main/default/objects/Target__c/listViews/Sales_Target.listView-meta.xml
<ListView>
    <fullName>Sales_Target</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Monthly_Target_Date__c</columns>
    <columns>Segment__c</columns>
    <columns>Zone__c</columns>
    <columns>Product__c</columns>
    <columns>Actual_Monthly_Target__c</columns>
    <columns>Reference_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Target__c.Sales_Target</value>
    </filters>
    <label>Sales Target</label>
</ListView>